<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <!-- Category Selection Dropdown -->
    <Spinner
        android:id="@+id/category_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/category_options" />

    <!-- Price Title -->
    <TextView
        android:id="@+id/price_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price_title" />

    <!-- Price Input Field -->
    <EditText
        android:id="@+id/product_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
     />
    <EditText
        android:id="@+id/price_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price_hint"
        android:inputType="numberDecimal" />

    <!-- Description Title -->
    <TextView
        android:id="@+id/description_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_title" />

    <!-- Description Input Field -->
    <EditText
        android:id="@+id/description_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description_hint"
        android:maxLines="5" />

    <!-- Image Upload Button -->
    <Button
        android:id="@+id/image_upload_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_image_button" />

    <!-- ImageView to Display Uploaded Image -->
    <ImageView
        android:id="@+id/product_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone" />
    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_image_button" />


</LinearLayout>
